--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
